# dux

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  debug_scan.rs
.github/workflows/: ci.yml  release.yml
dux-cli/: Cargo.toml
dux-cli/src/: main.rs
dux-cli/src/app/: action.rs  mod.rs  state.rs  views.rs
dux-cli/src/tui/: event.rs  handler.rs  mod.rs
dux-cli/src/ui/: bar_chart.rs  build_artifacts_view.rs  confirm.rs  confirm_multi_delete.rs  footer.rs  header.rs  help.rs  large_files_view.rs  layout.rs  mod.rs  multi_delete_progress.rs  progress.rs  theme.rs  tree_view.rs
dux-core/: Cargo.toml
dux-core/src/: error.rs  lib.rs  size.rs
dux-core/src/cache/: metadata.rs  mod.rs
dux-core/src/scanner/: mod.rs  progress.rs  walker.rs
dux-core/src/tree/: arena.rs  mod.rs  node.rs
